maybe fixed horizontal scroll on mobile?

--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@ nav {
   display: flex;
   position: fixed;
   top: 0;
-  justify-content: end;
+  justify-content: center;
+  align-items: center;
   min-height: 40px;
   width: 100%;
   backdrop-filter: blur(20px);
